# Local-LLM-Scripts

./: .env.example  .gitignore  README.md  ask.py  fixmessage.py  fixprompt.py  fixtext.py  pyproject.toml
System Prompts/: fixmessage.md  fixprompt.md
scripts/: ask.py  fixmessage.py  fixprompt.py  fixtext.py
